--- a/SAO-EP/Src/NewAPFFormScreen1.fx.yaml
+++ b/SAO-EP/Src/NewAPFFormScreen1.fx.yaml
@@ -426,11 +426,11 @@ NewAPFFormScreen1 As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@'APF Uploads'],DataSourceInfo.DisplayName,'TimeofActivity')
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
+                    Height: =150
                     MaxLength: =DataSourceInfo([@'APF Uploads'], DataSourceInfo.MaxLength, 'TimeofActivity')
                     Required: =true
                     Update: |-
-                        =Concatenate(HourValue1.SelectedText.Value,":",MinuteValue1.SelectedText.Value)
+                        =Concatenate(HourValue1.SelectedText.Value,":",MinuteValue1.SelectedText.Value, " - ", HourValue1_1.SelectedText.Value, ":", MinuteValue1_1.SelectedText.Value)
                     Width: =578
                     X: =0
                     Y: =5
@@ -458,7 +458,7 @@ NewAPFFormScreen1 As screen:
                         Visible: =Parent.DisplayMode=DisplayMode.Edit
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =HourValue1.Y + HourValue1.Height
+                        Y: =133
                         ZIndex: =26
 
                     HourValue1 As dropdown:
@@ -473,9 +473,9 @@ NewAPFFormScreen1 As screen:
                         PaddingRight: =5
                         PaddingTop: =5
                         Tooltip: =Parent.DisplayName
-                        Width: =DatePickerCanvas3.Width / 2 - 5
-                        X: =DatePickerCanvas3.X
-                        Y: =DataCardKey25_1.Y + DataCardKey25_1.Height + 10
+                        Width: =DatePickerCanvas3.Width / 4 - 5
+                        X: =288
+                        Y: =40
                         ZIndex: =27
 
                     Separator2 As label:
@@ -490,8 +490,8 @@ NewAPFFormScreen1 As screen:
                             =":"
                         Width: =10
                         Wrap: =false
-                        X: =HourValue1.X + HourValue1.Width
-                        Y: =HourValue1.Y
+                        X: =413
+                        Y: =40
                         ZIndex: =28
 
                     MinuteValue1 As dropdown:
@@ -506,9 +506,82 @@ NewAPFFormScreen1 As screen:
                         PaddingTop: =5
                         Tooltip: =Parent.DisplayName
                         Width: =HourValue1.Width
-                        X: =HourValue1.X + HourValue1.Width + Separator2.Width
+                        X: =423
                         Y: =HourValue1.Y
                         ZIndex: =29
+
+                    TextCanvas17 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        Size: =18
+                        Text: |-
+                            ="Start Time: "
+                        Weight: ="Start Time"
+                        Width: =96
+                        X: =47
+                        Y: =43
+                        ZIndex: =30
+
+                    TextCanvas17_1 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        Size: =18
+                        Text: |-
+                            ="End Time: "
+                        Weight: ="Start Time"
+                        Width: =96
+                        X: =47
+                        Y: =90
+                        ZIndex: =31
+
+                    HourValue1_1 As dropdown:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: =Text(Hour(Parent.Default),"00")
+                        DisplayMode: =Parent.DisplayMode
+                        FontWeight: =FontWeight.Lighter
+                        Height: =DatePickerCanvas3.Height
+                        Items: =["07","08","09","10","11","12","13","14","15","16","17","18","19"]
+                        PaddingBottom: =5
+                        PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                        PaddingRight: =5
+                        PaddingTop: =5
+                        Tooltip: =Parent.DisplayName
+                        Width: =DatePickerCanvas3.Width / 4 - 5
+                        X: =288
+                        Y: =90
+                        ZIndex: =32
+
+                    MinuteValue1_1 As dropdown:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: =Text(Minute(Parent.Default),"00")
+                        DisplayMode: =Parent.DisplayMode
+                        Height: =HourValue1.Height
+                        Items: =["00","01","02","03","04","05","06","07","08","09","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50","51","52","53","54","55","56","57","58","59"]
+                        PaddingBottom: =5
+                        PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                        PaddingRight: =5
+                        PaddingTop: =5
+                        Tooltip: =Parent.DisplayName
+                        Width: =HourValue1.Width
+                        X: =424
+                        Y: =90
+                        ZIndex: =33
+
+                    Separator2_1 As label:
+                        Align: =Align.Center
+                        FontWeight: =FontWeight.Bold
+                        Height: =HourValue1.Height
+                        PaddingBottom: =0
+                        PaddingLeft: =0
+                        PaddingRight: =0
+                        PaddingTop: =0
+                        Text: |-
+                            =":"
+                        Width: =10
+                        Wrap: =false
+                        X: =414
+                        Y: =90
+                        ZIndex: =34
 
                 "'Lead Organizer_DataCard1_1' As typedDataCard.textualEditCard":
                     BorderStyle: =BorderStyle.Solid
