--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -154,6 +154,7 @@
     "Reports_1",
     "APF_Approvals",
     "NewAPFFormScreen1",
-    "Exclude Date/s"
+    "Exclude Date/s",
+    "ViewUnSignedAPF"
   ]
 }
