--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -608,11 +608,14 @@
                                DisplayMode.Disabled,
                                DisplayMode.Edit)
                         Height: =24
-                        OnSelect: |
+                        OnSelect: |-
                             =Set(CurrentAPF_ID, ThisItem.ID);
                             Set(CurrentAPFOrg, ThisItem.'Name of Lead Org');
                             Set(CurrentAPFOrgAdviser, LookUp('Users', 'userOrg: orgAcronym'[@Value] = ThisItem.'Name of Lead Org'));
+                            Navigate(ViewUnSignedAPF);
+                            /*
                             Set(openApprovalScreen, true);
+                            */
                         Text: ="Review"
                         Visible: =If(CurrentUser.userRoles.Id<3,true,false)
                         Width: =66
